Fix box-sizing to center article on mobile

--- a/src/views/App/index.module.scss
+++ b/src/views/App/index.module.scss
@@ -2,6 +2,7 @@
     background: white;
     width: 100%;
     max-width: 600px;
+    margin: 0 auto;
     border-radius: 20px;
     padding: 20px 55px 30px;
 
